# rag2ec2

./: .gitignore  Makefile  compose_local.yml  compose_production_flask.yml  compose_production_ollama.yml  flask_server.py  pyproject.toml  readme.md
compose/local/flask/: Dockerfile  entrypoint  start
compose/local/nginx/: Dockerfile  default.conf
compose/local/ollama/: Dockerfile  entrypoint  start  start_ollama
compose/production/flask/: Dockerfile  entrypoint  start
compose/production/ollama/: Dockerfile  entrypoint
templates/: ask_question.html
terraform/: ec2.tf  security_group.tf  variables.tf
